Fixing page control overlapping over rowpager in IE8.

--- a/src/com/googlecode/barongreenback/shared/style.less
+++ b/src/com/googlecode/barongreenback/shared/style.less
@@ -478,6 +478,7 @@ div.table-actions form {
 .pager-and-rowpager .pagination, .pager-and-rowpager .rowpager {
   .inlineBlock;
   margin: 0;
+  margin-right:1px;
   padding: 0;
   form {
       margin: 0;
